Adding support to weekly

--- a/app/views/user_mailer/transaction_notification.html.erb
+++ b/app/views/user_mailer/transaction_notification.html.erb
@@ -47,3 +47,4 @@
   <span style="color:#777">Thank you,</span><br/>
   <span style="color:#777">Money Tracker Team</span>
 </div>
+<%= notification_setting_link(@user) %>
