cleandb task and spell check

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% @title = "Register as new uesr" %>
+<% @title = "Register as new user" %>
 <% @page_action = {:name => "Sign in", :url => login_path} %>
 
 <%= form_for @user, :validate => true do |f| %>
