Code Cleanup and bug fixes

--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,9 +1,7 @@
-<%= form_for @user, :url => reset_password_url do |f| %>
-<p>
-<%= f.password_field :password %>
-</p>
-<p>
-<%= f.password_field :password_confirmation, :text => "Confirm Password" %>
-</p>
-<%= f.submit "Reset Password and Log in" %>
+<% @title = "Reset Password" %>
+
+<%= form_for @user, :url => reset_password_url, :validate => true  do |f| %>
+	<%= f.password_field :password %>
+	<%= f.password_field :password_confirmation %>
+	<%= f.submit "Reset Password and Log in" %>
 <% end %>
